some css to keep headings visible - needs some fixing!

--- a/sailraceseries/src/App.css
+++ b/sailraceseries/src/App.css
@@ -52,6 +52,8 @@ td {
   text-align: center; /* Center our text */
 }
 
+/* series results table styles
+*/
 .discard {
   color: #D0A0A0;
   text-decoration: line-through;
@@ -59,4 +61,35 @@ td {
 
 .qualified {
   background: #D0FAD0;
+}
+
+.container {
+  max-width: 100%;
+  max-height: 30em;
+  overflow: scroll;
+  position: relative;
+}
+
+.series_table {
+  position: relative;
+  border-collapse: collapse;
+}
+
+thead th {
+  position: sticky;
+  top: 0;
+  background: #DDD;
+  color: #444;
+}
+
+thead th:first-child {
+  left: 0;
+  z-index: 1;
+}
+
+tbody th {
+  position: sticky;
+  left: 0;
+  background: #DDD;
+  border-right: 1px solid #CCC;
 }
